--- a/final-report/mybib.bib
+++ b/final-report/mybib.bib
@@ -196,3 +196,8 @@ howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-22
   title = "{OpenVZ}",
   howpublished = {\url{http://wiki.openvz.org/Main_Page}},
 }
+
+@misc{lmbench,
+  title = "{LMbench}",
+  howpublished = {\url{http://www.bitmover.com/lmbench/why_lmbench.html}},
+}
