comments on abstract

--- a/final-report/abstract.tex
+++ b/final-report/abstract.tex
@@ -1,4 +1,6 @@
 \begin{abstract}
 Modern day smartphones are plagued with vulnerabilities.  As the smartphone adoption continues to increase, and more sensitive usage and information migrates to smartphones, these vulnerabilities simply are not acceptable.  We have created a system implementing X-server, unionfs, and linux containers, which can securely run native applications.  X-server provides the graphical interface required by most native applications, while unionfs and linux containers provide the isolation, to guarantee that the application cannot access other applications or sensitive information.
 
+\Comment{What happened to the desktop-app motivation?}
+\Comment{Perhaps make it sound more researchy if possible?}
 \end{abstract}
