--- a/final-report/TODO
+++ b/final-report/TODO
@@ -43,3 +43,4 @@ run lmbench. (talk to shivaram/will about modifying the Makefile appropriately)
   - To run lmbench, pull in the source tree from misc.git
   - cd src and then make results
 
+clean up conclusion
