--- a/final-report/intro.tex
+++ b/final-report/intro.tex
@@ -7,6 +7,8 @@ Migrating a system to a mobile device can take advantage of network or computati
 
 Existing solutions for isolation of mobile applications introduce a Type I hypervisor \cite{mvp, okl4} which manages the phone's hardware and allows running multiple operating system on top. While these solutions are useful, it would be better to have isolated applications which are integrated with the host operating system's application launcher and does not suffer from a large performance penalty. In order to achieve this goal, we propose to have an isolation framework running on the host operating system and a shared rendering engine for improved performance. Since most of the mobile devices work on the ARM architecture, we plan to evaluate how different virtualization techniques perform on ARM.\\
 
-Our preliminary investigations evaluate the difference in performance between emulating ARM-on-ARM vs x86-on-ARM and our results show that ARM-on-ARM virtualization has much lower performance overhead. We also detail other virtualization techniques that we plan to investigate which include traditional techniques like User Mode Linux and OS-virtualization tools like Linux Containers(LXC). Linux Containers present a low overhead technique of isolating different virtual environments and we believe that they may represent the ideal balance between security and usability.\\
+Our preliminary investigations evaluate the difference in performance between emulating ARM-on-ARM vs x86-on-ARM and our results show that ARM-on-ARM virtualization has much lower performance overhead, however, even ARM-on-ARM is prohibitively slow, and any emulation simply is not reasonable on a smartphone.  Given the large overheads of machine emulation, we had to explore alternative means of virtualization.  We looked into Xen and KVM, two popular virtualization solutions for x86, however we discovered that their implementations on ARM simply were nowhere near mature enough for our needs.
+
+Next, we explored an OS-level virtualization tool called Linux Containers(LXC). Linux Containers present a low overhead technique of isolating a process within a container.  A container is made up of several namespace virtualization techniques, where the uid, user namespace, network resources and more are virtualized in order to prevent the process inside the container from interfacing external data or resources.  Despite some difficulties in getting Linux Containers to run, it has been very effective.  After extensive testing, it has proved to be an ideal intersection of isolation and performance.
 
 We believe that an integrated solution where untrusted applications are integrated with mobile device would enable wider adoption. The rest of this report is structured as follows: Section \ref{sec:design} presents an overview of the design and also describes in detail some of the design choices which we make. Sections \ref{sec:impl} describes the preliminary implementation and deployment of virtualization on two smart phones and also discusses details about porting the X server. Evaluation of our existing system is presented in \ref{sec:eval}. Section \ref{sec:related} discusses existing efforts in this area and section \ref{sec:conclusion} concludes.
