expand conclusion, added URL

--- a/final-report/conclusion.tex
+++ b/final-report/conclusion.tex
@@ -1,6 +1,5 @@
 \section{Conclusion}
 \label{sec:conclusion}
-Initially, we had planned to focus on security and portability of our implementation.  However, as we progressed, we discovered that performance could not simply be ignored.  We discovered that QEMU was unusably slow in a smartphone environment and we had to step back and reconsider our goals in respect to performance.
+Today's smartphones are insecure, and often attempt to curb that by limiting the manner of applications that can be executed.  We built and evaluted \emph{MoVirt} to address both these issues, providing a framework to allow the execution of desktop linux applications on mobile devices, as well as providing a safe execution environment for both the new apps and any native application the device wants to run.  Our evaluation shows that \emph{MoVirt} doesn't sacrifice performance while achieving this, and we demonstrate our success in bringing X11 applications to mobile devices.  Most importantly, \emph{MoVirt} was built to \emph{add} to the existing device experience, not alter or supplant it, making it suitable and desirable to add to many mobile platforms.
 
-We experienced a lot of success in porting X to the Pre, and although the preliminary virtualization attempts were unusably slow, the remaining options are hardly exhausted.  In terms of performance Linux Containers (LXC) looks very promising.  Despite needing to backport the needed kernel functionality to support LXC on the Pre, we remain optimistic and will continue working towards our goal of a usable, fast, and secure solution for running native and untrusted apps on smartphones.
-
+Finally all of our work (source, modifications, build environments, packaging) are available at the following URL: \url{http://wdtz.org/cs523}, available generally under open-source licenses such as the GPL.
