done with conclusion, added \proj command to easily replace project name in the future

--- a/final-report/paper.tex
+++ b/final-report/paper.tex
@@ -11,8 +11,9 @@
 %Define one of these to see comments (or not)
 %\def\Comment#1{}
 \def\Comment#1{\noindent\textbf{\textsl{\large $\langle!\langle$#1$\rangle!\rangle$}}}
+\def\proj{MoVirt}
 
-\title{MoVirt: More Mobile than Mobile}
+\title{\proj : Secure Desktop Applications on Mobile Devices}
 \author{Will Dietz, Kevin Larson, Shivaram Venkataraman\\
 \{wdietz2, klarson5, venkata4\}@illinois.edu\\
 University of Illinois at Urbana Champaign}
