TODO: ipc vs non-ipc

--- a/final-report/TODO
+++ b/final-report/TODO
@@ -22,6 +22,8 @@ Add more to Future Work
 
 review all items marked as 'comment' in the paper.
 
+IPC vs non-IPC bar graph
+
 ------
 
 REVIEW EVERYTHING!!!
