fixed make error

--- a/final-report/impl.tex
+++ b/final-report/impl.tex
@@ -18,7 +18,7 @@ While experimenting with new kernels on our WebOS devices, we encountered an iss
 
 \subsection{X-Server}
 
-We made a number of important design decisions, many of which were in response to unexpected implementation difficulties.  \comment{how does the next sentence relate to this sentence?} The result of our X server (including a fixed Xsdl implementation) work is available on the website\footnotemark[1]. 
+We made a number of important design decisions, many of which were in response to unexpected implementation difficulties.  \Comment{how does the next sentence relate to this sentence?} The result of our X server (including a fixed Xsdl implementation) work is available on the website\footnotemark[1]. 
 \footnotetext[1]{http://wdtz.org/cs523/}\\
 
 \subsubsection{DDX}
