--- a/final-report/discussion.tex
+++ b/final-report/discussion.tex
@@ -15,7 +15,7 @@ Virtualization Results: Kernel Boot time in seconds
 \label{tab:virt_results}
 \end{table*}
 
-The ARM architecture is not directly virtualizable as there privileged instructions which when executed by the guest operating system, do not trap to the host kernel. There are many existing techniques like dynamic binary translation, trap-and-emulate using hardware extensions, translate to trap, paravirtualization which have been used in existing virtualization solutions for x86. We discuss some of these solutions below and why we believe containers are more suitable for smartphones.
+A large component of \emph{\proj} is the use of virtualization to achieve our security requirements.  Unfortunately, the ARM architecture is not directly virtualizable as there are privileged instructions which when executed by the guest operating system, do not trap to the host kernel. There are many existing techniques like dynamic binary translation, trap-and-emulate using hardware extensions, translate to trap, and paravirtualization which have been used in existing virtualization solutions for x86. We discuss some of these solutions below and why we believe containers are more suitable for smartphones.
 
 \subsection{QEMU on ARM}
 QEMU \cite{qemu} is one of the more recent, popular and opensource virtual machine monitors that can be used to run operating systems built for different architectures to run on different machines. QEMU relies on dynamic binary translation and has been ported to run on multiple platforms like ARM, PowerPC, i386 etc. Our first implementation used QEMU and attempts to address the initial design goal of evaluating the overhead of dynamic binary translation on a smartphone running an ARM processor. However, we found that the overhead due to dynamic binary translation is quite large without hardware assistance and explore other solutions for providing isolation. We present detailed results from our experiments in \ref{sec:eval}.
@@ -31,7 +31,7 @@ Some downsides of using UML are that the amount of overhead is relatively large 
 
 \subsection{Virtualization Results}
 
-Currently, we have evaluated the overhead of virtualization with a QEMU-based implementations running various distributions of Linux on both the Android and the Palm Pre as shown in Table \ref{tab:virt_results}. The most successful implementation used ARM on ARM virtualization and a basic ARM kernel image provided along with QEMU. Unfortunately, even this implementation was far too slow, taking 52 seconds to boot on the Pre and 154 seconds to boot on the Android. Additionally response times were terrible, often taking several seconds to display text input. A Debian ARM Lenny image took over 15 minutes to boot on the Palm Pre and crashed on the Android during boot. x86 emulation on ARM was also tested, with a TTY-Linux image; however, this was the slowest by far, taking over half an hour to boot on the Palm Pre. On the Android, x86 guest mode QEMU would not even run. Overall these experiments suggest that binary translation is not usable and that we need to explore for different virtualization techniques listed in Section \ref{sec:design}.
+Given the above results, the only system we were able to evaluate as a solution was QEMU (since the other two were unavailable for our platform).  We evaluated the overhead of virtualization with a QEMU-based implementations running various distributions of Linux on both the Android and the Palm Pre, and the results as given in Table \ref{tab:virt_results}. The most successful implementation used ARM on ARM virtualization and a basic ARM kernel image provided along with QEMU. Unfortunately, even this implementation was far too slow, taking 52 seconds to boot on the Pre and 154 seconds to boot on the Android. Additionally response times were terrible, often taking several seconds to display text input. A Debian ARM Lenny image took over 15 minutes to boot on the Palm Pre and crashed on the Android during boot. x86 emulation on ARM was also tested, with a TTY-Linux image; however, this was the slowest by far, taking over half an hour to boot on the Palm Pre. On the Android, x86 guest mode QEMU would not even run. Overall these experiments suggest that binary translation is not usable and that we need to explore for different virtualization techniques listed in Section \ref{sec:design}.
 
 % We plan to explore porting UML to ARM and measure the overhead caused in the weeks ahead. 
 
