--- a/final-report/eval.tex
+++ b/final-report/eval.tex
@@ -64,6 +64,22 @@ unzip        & $76$s        & $73.44$s         & $76.29$s           \\
 \subsection{LMbench3}
 Our general benchmarks showed that there was no reduction in throughput with the addition of the containers.  We felt that more thorough testing was in order to determine if there was any overhead pertaining to latencies, context switching, and the file system.  LMbench3 is the most mature and commonly used among the LMbench family.  It runs a wide variety of tests, ranging from intensive latency testing of cache misses to extensive context switching testing.  LMbench has been heavily used in industry as well as acadamia \cite{lmbench}.
 
+\begin{table*}[htb]
+{\small
+\hfill{}
+\begin{tabular}{|l|c|c|c|c|c|c|c|c|}
+\hline Benchmark & syscall & read & write & fstat & open/close & fork & fork+execve & fork+sh \\ 
+\hline
+Stock Kernel & 0.582 & 2.43 & 2.17 & 1.92 & 10.73 & 1030.45 & 3527.44 & 12552.8 \\
+Modified Kernel & 0.581 & 2.33 & 2.15 & 1.59 & 10.88 & 1118.2 & 3594.18 & 12865.8 \\
+Inside a container & 0.551 & 2.23 & 2.03 & 1.45 & 10.26 & 1076.55 & 3510.92 & 12497.5 \\ 
+\hline 
+\end{tabular}}
+\hfill{}
+\caption{ LMBench results - In Microseconds }
+\label{tab:lmbench_results}
+\end{table*}
+
 \subsection{Future Evaluation}
 
 Our goal for this project is to integrate an isolation technique which is usable and is integrated with the mobile device. We propose to evaluate the overhead due to the isolation framework and also ensure correctness using standard benchmarks. In particular, we plan to evaluate the latency involved in running an interactive application and measure how much benefit is obtained due to the shared X server running natively. We also plan to profile the memory and cpu usage overhead entailed by our design and compare the same with the application running natively. The VM Controller will be integrated with the window manager of at least one mobile device and we will demonstrate the ability to start and stop applications using the controller.
