added needed citations

--- a/final-report/mybib.bib
+++ b/final-report/mybib.bib
@@ -201,3 +201,18 @@ howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-22
   title = "{LMbench}",
   howpublished = {\url{http://www.bitmover.com/lmbench/why_lmbench.html}},
 }
+
+@misc{modversions,
+  title = "{Kernel config options}",
+  howpublished = {\url{http://www.kernel.org/doc/Documentation/kbuild/kconfig-language.txt}},
+}
+
+@misc{pre_kernel,
+  title = "{Palm Pre Open Source Packages}",
+  howpublished = {\url{http://opensource.palm.com/1.4.1.1/index.html}},
+}
+
+@misc{lxc_kernel,
+  title = "{Linux Container Components}",
+  howpublished = {\url{http://lxc.sourceforge.net/}},
+}
