--- a/final-report/mybib.bib
+++ b/final-report/mybib.bib
@@ -216,3 +216,11 @@ howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-22
   title = "{Linux Container Components}",
   howpublished = {\url{http://lxc.sourceforge.net/}},
 }
+
+@misc{lmbench_paper,
+  title = "{LMbench: Portable tools for performance analysis}",
+  author = "Larry McVoy and Carl Staelin",
+  year = {1996},
+  organization = {USENIX Association},
+  howpublished = {\url{http://lmbench.sourceforge.net/lmbench-usenix.pdf}},
+}
