addressing some impl section issues

--- a/final-report/impl.tex
+++ b/final-report/impl.tex
@@ -11,15 +11,14 @@ Despite the fact the Pre and the Android are both running Linux OSes on an ARM c
 \Comment{CLEANUP}
 While experimenting with new kernels on our WebOS devices, we encountered an issue that took some work to get around.  Like many mobile devices the Palm Pre ships with a number of binary modules for which the source is unavailable.  For example, the wifi drivers ``sd8xxx.ko'' and ``uap8xxx.ko'' ship with the device, but are not open-source and so all we have is the final binary module.  This is not uncommon for linux drivers, but presents us with two issues, both having to do with maintaining the ABI. \\
 
-    The first issue is simpler, regarding the 'MODVERSIONS' config option in the kernel \Comment{CITE}.  This config option serves the purpose of help identify symbols by their contents and functionality by appending a CRC of related information to the symbol name.  This was an issue because our changes modified slightly (if not functionally) the definitions of some code, and resulted in mismatched version info.  Our solution was to build the kernel without support for this, but the result is less safe checking of loaded modules.  Note that this is not a security concern since loading modules is a priviliged operation anyway, but rather is undesirable to help prevent the careless user from loading modules they should not. \\
+    The first issue is simpler, regarding the 'MODVERSIONS' config option in the kernel \Comment{CITE}.  This config option serves the purpose of help identify symbols by their contents and functionality by appending a CRC of related information to the symbol name.  This was an issue because our changes modified slightly (if not functionally) the definitions of some code, and resulted in mismatched version info.  Our solution was to build the kernel without support for this, but the result is less safe checking of loaded modules.  Note that this is not a security concern since loading modules is a privileged operation anyway, but rather is undesirable to help prevent the careless user from loading modules they should not. \\
 
     The second issue is similar but presented more of a challenge was what this locking to a particular ABI meant regarding the kinds of changes we could make.  The Pre ships with a modified version of linux 2.6.24 \Comment{CITE}, but full support for LXC was not merged into the linux mainline until 2.6.26 \Comment{CITE}.  In 2.6.24 there is partial LXC support, and we had to backport some of the other pieces.  However we were unable to get full LXC support since some features (such as network namespaces) are rely on significant changes in the kernel architecture.  However, this is not a fault in our design and a device manufacturer most likely would not be faced with this issue, being in the position to acquire or build the related modules for the kernel version they desired. \\
 
 
 \subsection{X-Server}
 
-We made a number of important design decisions, many of which were in response to unexpected implementation difficulties.  \Comment{how does the next sentence relate to this sentence?} The result of our X server (including a fixed Xsdl implementation) work is available on the website\footnotemark[1]. 
-\footnotetext[1]{http://wdtz.org/cs523/}\\
+The X-server serves as the graphical framework that integrates the applications into the host environment.  As part of our efforts to bring X11 to the phones, we had to make a few decisions that are detailed below. \\
 
 \subsubsection{DDX}
 The X-Server architecture contains multiple Device Dependent X (DDX) implementations.  The most used one is `xfree86', but there are others, such as `kdrive' \cite{x_glossary}.  We chose to use kdrive because of the Xsdl functionality it contains, which allows one to run X using SDL as a backend.  Unfortunately Xsdl is so out of date that it was recently removed from the X project altogether due to being broken and unmaintained. \\
@@ -43,8 +42,6 @@ The second issue is that many keys that are required for doing something as simp
 A primary goal of our project is to cleanly integrate into the host X server.  While our current implementation is a great step and does integrate as a window in the existing windowing system for the device, there is an issue.  Presently the X server will render everything into one window (see Figure \ref{fig:x_screenie}), which requires a window manager to manage the windows.  This is bad both because it is hard to use but also because it is a hard break from the goal of integrating with the parent window manager--now the user has to think about it as two separate systems.\\
 
 One solution to this is to take advantage of the work done on rootless X \cite{rootless}.  ``The generic rootless layer allows an X server to be implemented on top of another window server in a cooperative manner. This allows the X11 windows and native windows of the underlying window server to coexist on the same screen. The layer is called ``rootless'' because the root window of the X server is generally not drawn. Instead, each top-level child of the root window is represented as a separate on-screen window by the underlying window server'' \cite{rootless}.\\
-
-\Comment{multiwindow}
 
 Another idea is to take advantage of standard X notification events \cite{notifications} and hook into mobile device notification systems, which both WebOS and Android support. \\
 
