finish handling comments from impl

--- a/final-report/impl.tex
+++ b/final-report/impl.tex
@@ -26,7 +26,7 @@ The X-Server architecture contains multiple Device Dependent X (DDX) implementat
 From X version control: ``if anyone uses this in production, a big scary monster will eat them'' \cite{x_quote}.  The unfortunate result of this was much work spent fixing Xsdl and bringing it up to date, in order to work with the rest of X.  Fixes including interactions with the X server, as well as fixing the rendering code and the input handling. \\
 
 \subsubsection{SDL and GLES}
-As described above, the code we started with \Comment{Palm Pre code or kdrive code?} used Simple DirectMedia Layer (SDL) \cite{sdl} for input and rendering.  Once we had achieved this functionality, we noticed the display lagged when doing even basic things like moving the cursor.  Previous experience working with SDL on this device suggested that using GLESv2 \cite{gles} and custom shaders would improve a task even as simple as blitting \Comment{define}, so we ported the rendering bits to use GLESv2. \\
+As described above, the Xsdl kdrive code we started with used Simple DirectMedia Layer (SDL) \cite{sdl} for input and rendering.  Once we had achieved this functionality, we noticed the display lagged when doing even basic things like moving the cursor.  Previous experience working with SDL on this device suggested that using GLESv2 \cite{gles} and custom shaders would improve a task even as simple as blitting (graphical copy), so we ported the rendering bits to use GLESv2.  We provide numbers for the resulting increase in performance and discussion in Section~\ref{sec:x_eval}.
 
 \subsubsection{Devices that do not support SDL}
 Although the Pre has support for SDL, many devices do not, and that is something we have taken into consideration.  The kdrive structure can be made rather portable: at its heart it just needs something that can render a pixelbufer, and feed it input (either event driven or by polling).  This means that we could potentially support Android devices through Java Native Interface (JNI) \cite{jni} passing the buffer to a java application to blit and the java application blitting to the screen, as well as gathering input and feeding it to the X server. \\
